feat: add validation static

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,19 @@
     <div class="w-full flex">
         <div id="players" class="flex flex-col gap-6 w-1/2"></div>
     </div>
-    
+
     <script src="../js/index.js"></script>
+
+    <div class="w-full flex justify-center mt-6">
+        <button id="validateBtn" class="bg-yellow-400 hover:bg-yellow-300 text-black font-bold py-2 px-4 rounded shadow">
+            Validate Static
+        </button>
+    </div>
+
+    <div id="validationResults" class="mt-6 w-full flex justify-center">
+        <div class="text-white font-mono w-fit px-4 py-2" id="resultArea"></div>
+    </div>
+
+    <script src="../js/validate.js"></script>
 </body>
 </html>
