--- a/html/index.html
+++ b/html/index.html
@@ -5,26 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XIV Static Helper</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .scrollbar-hide::-webkit-scrollbar {
+            display: none;
+        }
+        .scrollbar-hide {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+    </style>
 </head>
 <body class="bg-[#001f4d] text-white min-h-screen p-6">
-    <h1 class="text-4xl text-white text-center mb-8 drop-shadow">Static Composition</h1>
+    <h1 class="text-4xl text-white text-center py-4 drop-shadow w-full">Static Composition</h1>
 
-    <div class="w-full flex">
-        <div id="players" class="flex flex-col gap-6 w-1/2"></div>
+    <div class="flex h-[calc(100%-5rem)]">
+        <div class="w-2/3 overflow-y-auto pr-4 scrollbar-hide" id="playersWrapper">
+            <div id="players" class="flex flex-col gap-6 p-4"></div>
+        </div>
+
+        <div class="w-1/3 flex flex-col p-4 gap-4 border-l border-white">
+            <button id="validateBtn" class="bg-yellow-400 hover:bg-yellow-300 text-black font-bold py-2 px-4 rounded shadow w-fit self-center">
+            Validate Static
+            </button>
+
+            <div id="validationResults" class="overflow-y-auto h-full scrollbar-hide">
+                <div class="text-white font-mono w-full px-2 py-2" id="resultArea"></div>
+            </div>
+        </div>
     </div>
 
     <script src="../js/index.js"></script>
-
-    <div class="w-full flex justify-center mt-6">
-        <button id="validateBtn" class="bg-yellow-400 hover:bg-yellow-300 text-black font-bold py-2 px-4 rounded shadow">
-            Validate Static
-        </button>
-    </div>
-
-    <div id="validationResults" class="mt-6 w-full flex justify-center">
-        <div class="text-white font-mono w-fit px-4 py-2" id="resultArea"></div>
-    </div>
-
     <script src="../js/validate.js"></script>
+    <script src="../js/session.js"></script>
 </body>
 </html>
