--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,37 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
+
+        .label-glow {
+            position: relative;
+            display: inline-block;
+            border-radius: 0.25rem;
+        }
+
+        .label-glow .job-glow {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+            border-radius: 0.25rem;
+            filter: blur(6px) brightness(1.8);
+            opacity: 0.7;
+            animation: shimmer 1.5s infinite ease-in-out;
+            pointer-events: none;
+        }
+
+        .label-glow img {
+            position: relative;
+            z-index: 1;
+            border-radius: 0.25rem;
+        }
+
+        @keyframes shimmer {
+            0% { filter: blur(6px) brightness(2.2); }
+            50% { filter: blur(10px) brightness(3.2); }
+            100% { filter: blur(6px) brightness(2.2); }
+        }
     </style>
 </head>
 <body class="bg-[#001f4d] text-white min-h-screen p-6">
@@ -35,6 +66,7 @@
     </div>
 
     <script src="../js/index.js"></script>
+    <script src="../js/job-preference.js"></script>
     <script src="../js/validate.js"></script>
 </body>
 </html>
