--- a/html/index.html
+++ b/html/index.html
@@ -55,6 +55,34 @@
         </div>
 
         <div class="w-1/3 flex flex-col p-4 gap-4 border-l border-white">
+            <div class="flex flex-col gap-4 p-2 border border-white rounded bg-[#002244] text-white">
+                <h2 class="text-lg font-semibold text-center">Control Panel</h2>
+                <label class="flex items-center gap-2">
+                    <input type="checkbox" id="allowDuplicateRoles" class="accent-yellow-400">
+                    Allow duplicate roles in the static
+                </label>
+                <label class="flex items-center gap-2">
+                    <input type="checkbox" id="allowSameRanged" class="accent-yellow-400">
+                    Allow two physical or two magical ranged
+                </label>
+                <label class="flex items-center gap-2">
+                    <input type="checkbox" id="allowSameHealType" class="accent-yellow-400">
+                    Allow two pure or two shield healers
+                </label>
+
+                <div class="flex flex-wrap justify-center gap-2 pt-2 border-t border-white mt-2">
+                    <button id="resetBtn" class="bg-gray-500 hover:bg-gray-400 text-white font-bold py-1 px-3 rounded shadow">
+                        Reset
+                    </button>
+                    <button id="importBtn" class="bg-gray-500 hover:bg-gray-400 text-white font-bold py-1 px-3 rounded shadow">
+                        Import
+                    </button>
+                    <button id="exportBtn" class="bg-gray-500 hover:bg-gray-400 text-white font-bold py-1 px-3 rounded shadow">
+                        Export
+                    </button>
+                </div>
+            </div>
+
             <button id="validateBtn" class="bg-yellow-400 hover:bg-yellow-300 text-black font-bold py-2 px-4 rounded shadow w-fit self-center">
             Validate Static
             </button>
